backend/vulnerability_analysis/testing/bof2/full/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7fa2a6400000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7fa026400000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7ea026400000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7e8026400000 size=128 GiB)
KLEE: ERROR: final_tc/bof2_klee.c:17: failed external call: __ubsan_handle_divrem_overflow
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strcpy.c:27: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strlen.c:22: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
